--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Portofolio Dzaky</title>
 
     <!-- CSS External -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
+
 
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>                                                  
